 * Added button to copy categories from another project, in addition to the current 'copy to'.
 * Added new localization strings.
 * Added support for allowing managers to update project information, change project user list, add/edit/delete categories and versions.
 * Added a remove link next to the edit link in the project categories and project versions to all deleting without going into edit.
 * Quoted various text values retrieved from a database and used in a database query.
 * Updated Hungarian localization.
 * Updated Russian localizations.
 * Updated Romanian localization.
 * Updated German localization.
 * Updated Danish lozalization.
 * Updated Norwegian localization.
 * Updated comments in all localization files to point to correct file names.
 * Removed French2 localization (out of date, without HTML entities. Replaced by new French localization).
 * Removed HTML entities from all localization files.
 * Removed get_status_bgcolor from core_helper_API.php and all files using it, in favor of get_status_color.
 * Removed special status of 'closed' concerning colors. 'View all bugs' will use the configured background color.
 * Reworked code formatting for $c_ variables.
 * Reworked !isset() checks to use check_varset().
 * Reworked BCTimer class to be more useful for debugging.
 * Modified input checked variables to be prefixed by $c_.
 * Modified form elements to be standards compliant.
 * Modified core_print_API.php to escape double quotes in text fields, instead of replacing them by single quotes.
 * Modified all string files to use single quotes instead of double quotes.
 * Modified all php files to use single quotes where double quotes were unnecessary.
 * Modified core_html_API.php to print a META-tag defining the charset.
 * Modified core_email_API.php to send a content-type header in emails.
 * Modified core_user_API.php, login.php and login_page.php to send the user back to the referring page after login.